package cz.applifting.graphqlempty.firebasechat.common

object TestTags {
    const val MESSAGE_INPUT = "MESSAGE_INPUT"
}